--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Azaz Khan | Code Ninja</title>
+	<title>Daniyal Khan</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -13,29 +13,29 @@
 	<link href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/themes/indigo-white.css">
+	<!-- <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
+	<link rel="stylesheet" href="css/themes/white-red.css">
 	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
 </head>
 <body>
 	<main>
-		<div class="intro">Hello, I'm Azaz!</div>
+		<div class="intro">Hello, I'm Daniyal!</div>
 		<div class="tagline">All-Star Dev | Code Fanatic | Tech Enthusiast</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/aeyzaz"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://twitter.com/aeyzazkhan"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://dev.to/aeyzaz"><i class="fab fa-dev"></i></a>
-			<a target="_blank" href="https://stackoverflow.com/users/5656033/aeyzaz-khan"><i class="fab fa-stack-overflow"></i></a>
-			<a target="_blank" href="https://www.linkedin.com/in/aeyzaz"><i class="fab fa-linkedin"></i></a>
-			<a target="_blank" href="https://medium.com/@aeyzazkhan"><i class="fab fa-medium"></i></a>
-			<a target="_blank" href="https://www.freecodecamp.org/aeyzaz"><i class="fab fa-free-code-camp"></i></a>
+			<a target="_blank" href="https://github.com/daniyalkhan55"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://twitter.com/#"><i class="fab fa-twitter"></i></a>
+			<a target="_blank" href="https://dev.to/#"><i class="fab fa-dev"></i></a>
+			<a target="_blank" href="https://stackoverflow.com/users/#"><i class="fab fa-stack-overflow"></i></a>
+			<a target="_blank" href="https://www.linkedin.com/in/#"><i class="fab fa-linkedin"></i></a>
+			<a target="_blank" href="https://medium.com/#"><i class="fab fa-medium"></i></a>
+			<a target="_blank" href="https://www.freecodecamp.org/#"><i class="fab fa-free-code-camp"></i></a>
 			<!-- <a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a>
 			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a> -->
     </div>
