--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Daniyal Khan</title>
+	<title>Shazeb Abbasi</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -25,11 +25,11 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Hello, I'm Daniyal!</div>
+		<div class="intro">Hello, I'm Shazeb!</div>
 		<div class="tagline">All-Star Dev | Code Fanatic | Tech Enthusiast</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/daniyalkhan55"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://github.com/shaz3bb"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/#"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://dev.to/#"><i class="fab fa-dev"></i></a>
 			<a target="_blank" href="https://stackoverflow.com/users/#"><i class="fab fa-stack-overflow"></i></a>
