--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="tagline">All-Star Dev | Code Fanatic | Tech Enthusiast</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/shaz3bb"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://github.com/shaz3bbb"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/#"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://dev.to/#"><i class="fab fa-dev"></i></a>
 			<a target="_blank" href="https://stackoverflow.com/users/#"><i class="fab fa-stack-overflow"></i></a>
